2008-09-06  higepon  <higepon@users.sourceforge.jp>

        * Object-inl.h : Break all compilation dependencies.

2008-09-04  higepon  <higepon@users.sourceforge.jp>

        * reader.lex : Added.

        * reader.y : Added for new reader.

2008-09-01  higepon  <higepon@users.sourceforge.jp>

        * example/grass.scm (parse): Applied a patch by IRIE Shinsuke.

2008-08-29  higepon  <higepon@users.sourceforge.jp>

        * library.scm (list-sort): Ported R6RS sorting from Ypsilon Scheme System by Y.FUJITA, LittleWing Company.

2008-08-28  higepon  <higepon@users.sourceforge.jp>

        * 0.0.6 released.

2008-08-26  higepon  <higepon@users.sourceforge.jp>

        * library.scm (newline): fixed bug of (newline).

        * Rewrote error system for reader.

        * ErrorProcedures.cpp (scheme::callLexicalViolationAfter): Added.

        * read.cpp (read_bytevector): Added read bytevector support.

2008-08-24  higepon  <higepon@users.sourceforge.jp>

        * library.scm: Implmented all of R6RS Enumrations.

        * read.cpp (Scm_StringToNumber): Fixed reader bug.

2008-08-23  higepon  <higepon@users.sourceforge.jp>

        * library.scm : Implmented all of R6RS List utilities.

        * VM.cpp (VM::run): Fixed cal/cc for multiple values.

        * ArithmeticProcedures.cpp : Added max and min.

        * library.scm: Added partition, for-all, null*? and exists.

        * ArithmeticProcedures.cpp: Added.

2008-08-22  higepon  <higepon@users.sourceforge.jp>

        * psyntax.cpp (getBuiltinPsyntax): We now precompiled psyntax. It's load speed become much faster.

        * BuiltinSymbols.cpp : Improved for faster compilation for g++.

2008-08-20  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (tag?): Fixed the bug. use equal? instead of =.

        * scripts/gen-pre-compiled-faster-cpp.scm :
          Improved compilation speed for compiler.cpp, match.cpp.
